# batarim-utilization-logger

./: .hgeol  CMakeLists.txt  CONTRIBUTORS.txt  LICENSE.txt  README.md  clear.bat  cmake_uninstall.cmake.in  generate.bat
cmake_scripts/: clear.bat  clear.sh  generate.bat  generate.sh
deb_pkg/: CMakeLists.txt  control  deb_build.sh
docs/: Architecture_Overview.md  Code_Conventions.md  Contributing_Code.md  dependency_graph.dot
install_scripts/: CMakeLists.txt  setup.sh  teardown.sh
linux_deb_pkg/: CMakeLists.txt  control  deb_build.sh
manpages/: CMakeLists.txt  batarim-console.1  batarim-logger.1
src/: CMakeLists.txt  cpu_usage.hpp  main.c  main.cpp  ram_usage.h  unix_cpu_usage.cpp  unix_ram_usage.c  windows_com_setup_exception.hpp  windows_cpu_usage.cpp  windows_ram_usage.c  windows_wmi_exception.hpp
src/active_window/: ActiveWindow.hpp  CMakeLists.txt  IActiveWindow.hpp  LinuxActiveWindow.cpp  LinuxActiveWindow.hpp  LinuxInvalidActiveWindow.hpp  WindowsActiveWindow.cpp  WindowsActiveWindow.hpp  active_window.hpp  active_window_module.hpp  linux_ActiveWindow.cpp  linux_active_window.cpp  linux_active_window_module.cpp  unix_active_window.cpp  windows_ActiveWindow.cpp  windows_active_window.cpp  windows_active_window_module.cpp
src/aggregated_process_collection/: AggregatedProcessCollection.cpp  AggregatedProcessCollection.hpp  CMakeLists.txt
src/console/: CMakeLists.txt  ConsoleDisplayer.hpp  console.cpp
src/cpu_usage/: CMakeLists.txt  cpu_usage.hpp  linux_cpu_usage.cpp  unix_cpu_usage.cpp  windows_cpu_usage.cpp  windows_exception.hpp  windows_pdh_exception.hpp  windows_wmi_exception.hpp
src/formatted_process_collection/: CMakeLists.txt  FormattedProcessCollection.hpp  FormattedProcessCollectionFactory.cpp  FormattedProcessCollectionFactory.hpp  ProcessUsageInfo.hpp  WindowsFormattedProcessCollection.hpp
src/logger/: CMakeLists.txt  LoggerDisplayer.hpp  batarim.rc  logger.cpp
src/process_tree/: CMakeLists.txt  LinuxProcessTree.hpp  ProcessTree.cpp  ProcessTree.hpp  WindowsProcessTree.cpp  WindowsProcessTree.hpp  linux_process_tree_module.cpp  process_tree_module.hpp  windows_process_tree_module.cpp
src/ram_usage/: CMakeLists.txt  linux_ram_usage.cpp  ram_usage.hpp  unix_ram_usage.cpp  windows_ram_usage.cpp
src/raw_process_collection/: CMakeLists.txt  LinuxRawProcessCollection.cpp  LinuxRawProcessCollection.hpp  RawProcessCollection.cpp  RawProcessCollection.hpp  RawProcessCollectionFactory.cpp  RawProcessCollectionFactory.hpp  WindowsRawProcessCollection.cpp  WindowsRawProcessCollection.hpp
src/timestamp/: CMakeLists.txt  timestamp.cpp  timestamp.hpp
src/uptime/: CMakeLists.txt  linux_uptime.cpp  uptime.hpp  windows_uptime.cpp
src/usage_reporter/: CMakeLists.txt  FormattedProcessCollection.cpp  FormattedProcessCollection.hpp  FormattedProcessCollectionFactory.cpp  IUsageReporterRequestCollectionSetter.hpp  IUsageResultGetter.hpp  LinuxFormattedProcessCollection.cpp  LinuxFormattedProcessCollection.hpp  LinuxRawProcessCollection.cpp  LinuxRawProcessCollection.hpp  LinuxUsageReporter.cpp  LinuxUsageReporter.hpp  ProcessInfoOutputs.hpp  ProcessList.cpp  ProcessList.hpp  ProcessUsageInfo.hpp  RawProcessCollection.cpp  RawProcessCollection.hpp  RawProcessCollectionFactory.cpp  RawProcessCollectionFactory.hpp  UsageReporter.cpp  UsageReporter.hpp  UsageReporterFactory.cpp  UsageReporterFactory.hpp  UsageReporterRequestCollection.hpp  WindowsRawProcessCollection.hpp  WindowsUsageReporter.cpp  WindowsUsageReporter.hpp  linux_usage_reporter_module.cpp  usage_reporter_module.hpp  windows_usage_reporter_module.cpp
src/utilities/: CMakeLists.txt  linux_utilities.cpp  linux_utilities.hpp  utilities.hpp  windows_encoding_methods.cpp  windows_encoding_methods.hpp  windows_utilities.cpp  windows_utilities.hpp
src/viewmodel/: CMakeLists.txt  DLLDefines.hpp  IDisplayer.hpp  viewmodel.cpp  viewmodel.hpp
src/windows_pdh_wrapper/: CMakeLists.txt  PdhException.cpp  PdhException.hpp  pdh_exception.hpp  pdh_wrapper.cpp  pdh_wrapper.hpp
windows_installer/: BatarimUI_Workflow.wxs  Batarim_LogDirDlg.wxs  Batarim_en-us.wxl  CMakeLists.txt  batarim.wxs  dlg_bkg.xcf  license.rtf  task.vbs  top_banner.xcf
