# data sources
add_subdirectory (utilities)
add_subdirectory (raw_process_collection)
add_subdirectory (formatted_process_collection)
add_subdirectory (aggregated_process_collection)
add_subdirectory (process_tree)
add_subdirectory (usage_reporter)
add_subdirectory (ram_usage)
add_subdirectory (active_window)
add_subdirectory (timestamp)
add_subdirectory (uptime)

# view model
add_subdirectory (viewmodel)

# views
add_subdirectory (console)
add_subdirectory (logger)
